--- a/package.json
+++ b/package.json
@@ -44,6 +44,19 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
+    "@tiptap/extension-bold": "^3.10.1",
+    "@tiptap/extension-bullet-list": "^3.10.1",
+    "@tiptap/extension-color": "^3.10.1",
+    "@tiptap/extension-highlight": "^3.10.1",
+    "@tiptap/extension-italic": "^3.10.1",
+    "@tiptap/extension-link": "^3.10.1",
+    "@tiptap/extension-list-item": "^3.10.1",
+    "@tiptap/extension-ordered-list": "^3.10.1",
+    "@tiptap/extension-placeholder": "^3.10.1",
+    "@tiptap/extension-text-style": "^3.10.1",
+    "@tiptap/extension-underline": "^3.10.1",
+    "@tiptap/react": "^3.10.1",
+    "@tiptap/starter-kit": "^3.10.1",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
